# ts-jest-repro

./: BUILD.bazel  WORKSPACE  lib.ts  package.json  ts_jest_test.bzl
