load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")
load("//:ts_jest_test.bzl", "ts_jest_test")

ts_library(
    name = "lib",
    srcs = [
        "lib.ts",
    ],
    deps = [
        "@npm//@types/flatbuffers",
    ],
)

pkg_npm(
    # Declare that the root folder is an npm package named "jest_repro"
    # so it can be imported as such
    name = "jest_repro",
    package_name = "jest_repro",
    deps = [":lib"],
)

ts_jest_test(
    name = "test",
    srcs = [
        "lib.test.ts",
    ],
    data = [
        ":jest_repro",
    ],
    jest_config = "jest.config.js",
    deps = [
        ":lib",
    ],
)
